--- a/exams.html
+++ b/exams.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css">
-    <title>Exams</title>
+    <title>{{subjectName}} Exams</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
