--- a/timetable.html
+++ b/timetable.html
@@ -22,7 +22,7 @@
     </tbody>
   </table>
 
-  <script src="examsArray.js"></script>
+  <script src="examsArrayTest.js"></script>
   <script>
     exams.forEach(exam => {
       const row = document.createElement('tr');
