--- a/timetable.html
+++ b/timetable.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exams Table</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="menu-styles.css">
 </head>
 <body>
   <table border="1">
