--- a/timetable.html
+++ b/timetable.html
@@ -64,7 +64,7 @@
       <br><br>
     </div>
   
-  <table border="1">
+  <table border="1", id="exam-tables">
     <thead>
       <tr>
         <th>Date</th>
