--- a/timetable.html
+++ b/timetable.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="menu-styles.css">
 </head>
 <body>
+  <h1>All Subjects Timetable:</h1>
+  <br>
+  <br>
   <div id="open-menu-btn">&#9776;</div>
-
     <div id="side-menu">
       <h2>Subjects</h2>
       <a>Update to show subjects you are studying:</a>
