Added timetable page functionality

--- a/exams.html
+++ b/exams.html
@@ -10,9 +10,10 @@
     <h1>Exams for {{subjectName}}</h1>
 
     <button id="back-button" href="index.html">◄</button>
-    <div id="exam-tables" class="centre"></div>
+    <div id="exam-table"></div>
 
-    <script src="specificCountdown.js" type="module" ></script>
+    <script src="specificCountdown.js" type="module"></script>
+    <script src="shared.js" type="module"></script>
     <script>
       // Select the back button
       const backButton = document.getElementById("back-button");
