--- a/index.html
+++ b/index.html
@@ -353,7 +353,8 @@
       <p class="small">While I strive for accuracy, information may not be complete or up to date. Use at your own risk.</p>
       <p>&copy; Ruben Parnell <script>document.write(new Date().getFullYear())</script></p>
     </footer>
-    <script src="menu.js"></script>
+    <script src="menuMain.js" type="module"></script>
+    <!-- <script src="menuVisibility.js"></script> -->
     <script src="countdown.js" type="module"></script>
   </body>
 </html>
