--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       <br><br>
     </div>   
 
+    <a href="timetable.html"><div id="timetable-btn">Personal Timetable</div></a>
+
     <div id="main">
       <h1>Welcome to GCSE Exam Countdown</h1>
       <p>See the next paper for each subject below, or <u>click on a specific subject to see all papers</u>.</p>
@@ -354,7 +356,6 @@
       <p>&copy; Ruben Parnell <script>document.write(new Date().getFullYear())</script></p>
     </footer>
     <script src="menuMain.js" type="module"></script>
-    <!-- <script src="menuVisibility.js"></script> -->
     <script src="countdown.js" type="module"></script>
   </body>
 </html>
