--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
+
     <div id="open-menu-btn">&#9776;</div>
+
+    <a href="timetable.html"><div id="timetable-btn">Personal Timetable</div></a>
 
     <div id="side-menu">
       <h2>Subjects</h2>
@@ -64,12 +67,11 @@
         <label><input type="checkbox" id="computerScienceCheckbox" checked> Computer Science</label>
         <label><input type="checkbox" id="businessCheckbox" checked> Business</label>
       <br><br>
-    </div>   
-
-    <a href="timetable.html"><div id="timetable-btn">Personal Timetable</div></a>
+    </div>
 
     <div id="main">
       <h1>Welcome to GCSE Exam Countdown</h1>
+      <div class="spacing"></div>
       <p>See the next paper for each subject below, or <u>click on a specific subject to see all papers</u>.</p>
       <p>AM exams are set at 09:00, PM exams are set at 13:30.</p>
       <div id="subjects-list">
@@ -79,7 +81,7 @@
             <th>Unit Title</th>
             <th>Length (mins)</th>
             <th>Date</th>
-            <th>Time Left</th>
+            <th>Countdown</th>
           </tr>
           <tr>
             <td colspan="7" class="section">
@@ -357,5 +359,6 @@
     </footer>
     <script src="menuMain.js" type="module"></script>
     <script src="countdown.js" type="module"></script>
+    <script src="scroll.js"></script>
   </body>
 </html>
