Changed Duration to Length

--- a/timetable.html
+++ b/timetable.html
@@ -79,7 +79,7 @@
           <th>Unit Code</th>
           <th>Unit Title</th>
           <th>Board</th>
-          <th>Duration (mins)</th>
+          <th>Length (mins)</th>
         </tr>
       </thead>
       <tbody id="examsTableBody">
