Added view counter

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="menu-styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script async src="https://api.countapi.xyz/hit/examcountdown.live/visits?callback=liveViews"></script> <!-- For the counter -->
   </head>
   <body>
 
@@ -356,6 +357,7 @@
     <footer>
       <p class="small">While I strive for accuracy, information may not be complete or up to date. Use at your own risk.</p>
       <p>&copy; Ruben Parnell <script>document.write(new Date().getFullYear())</script></p>
+      <p>This page has had <span id="visits"></span> views.</p>
     </footer>
     <script src="menuMain.js" type="module"></script>
     <script src="countdown.js" type="module"></script>
