--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="menu-styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <script async src="https://api.countapi.xyz/hit/examcountdown.live/visits?callback=liveViews"></script> <!-- For the counter -->
+    <script async src="https://api.countapi.xyz/hit/examcountdown.live/visits?callback=liveViews" async></script> <!-- For the counter -->
   </head>
   <body>
 
