--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
     <script src="menuMain.js" type="module"></script>
     <script src="countdown.js" type="module"></script>
     <script src="scroll.js"></script>
+    <script src="viewCounter.js"></script>
     <script async src="https://api.countapi.xyz/hit/examcountdown.live/visits?callback=liveViews" async></script> <!-- For the counter -->
   </body>
 </html>
