Updated View Counter

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="menu-styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <script src="
+    https://cdn.jsdelivr.net/npm/countapi-js@1.0.2/index.min.js
+    "></script>    
   </head>
   <body>
 
@@ -356,12 +359,10 @@
     <footer>
       <p class="small">While I strive for accuracy, information may not be complete or up to date. Use at your own risk.</p>
       <p>&copy; Ruben Parnell <script>document.write(new Date().getFullYear())</script></p>
-      <p>This page has had <span id="visits"></span> views.</p>
+      <p class="small">This page has had <script type="text/javascript" src="//counter.websiteout.com/js/21/6/0/0"></script> views.</p>
     </footer>
     <script src="menuMain.js" type="module"></script>
     <script src="countdown.js" type="module"></script>
     <script src="scroll.js"></script>
-    <script src="viewCounter.js"></script>
-    <script async src="https://api.countapi.xyz/hit/examcountdown.live/visits?callback=liveViews" async></script> <!-- For the counter -->
   </body>
 </html>
