Updated geography p3 length to 90m

--- a/index.html
+++ b/index.html
@@ -356,6 +356,7 @@
       </div>
     </div>
     <p class="small">Please Note: MFL speaking tests and Art and Design exams are not included, as the timings of these are decided by individual centres.</p>
+    <p class="small">Please Note: Previously Geography Paper 3 was said to be 1h15m, however this has since been updated to 1h30m.</p>
     <footer>
       <p class="small">While I strive for accuracy, information may not be complete or up to date. Use at your own risk.</p>
       <p>&copy; Ruben Parnell <script>document.write(new Date().getFullYear())</script></p>
