Added Google Calendar Page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="open-menu-btn">&#9776;</div>
 
     <a href="timetable.html"><div id="timetable-btn">Personal Timetable</div></a>
+    <a href="calendar.html"><div id="calendar-btn">Google Calendar<img src="download.png"></img></div></a>
 
     <div id="side-menu">
       <h2>Subjects</h2>
