--- a/index.html
+++ b/index.html
@@ -16,8 +16,14 @@
 
     <div id="open-menu-btn">&#9776;</div>
 
-    <a href="timetable.html"><div id="timetable-btn">Personal Timetable</div></a>
-    <a href="calendar.html"><div id="calendar-btn">Google Calendar<img src="download.png"></img></div></a>
+    <div id="buttons">
+      <p class="small"><a href="timetable.html">Personal Timetable</a></p>
+      <p class="spacer small">|</p>
+      <p class="small"><a href="calendar.html">Google Calendar</p><img src="download.png" width="25"></a>
+    </div>
+
+    <!-- <a href="timetable.html"><div id="timetable-btn">Personal Timetable</div></a>
+    <a href="calendar.html"><div id="calendar-btn">Google Calendar<img src="download.png"></div></a> -->
 
     <div id="side-menu">
       <h2>Subjects</h2>
@@ -75,7 +81,7 @@
 
     <div id="main">
       <h1>Welcome to GCSE Exam Countdown</h1>
-      <div class="spacing"></div>
+      <div id="spacing"></div>
       <p>See the next paper for each subject below, or <u>click on a specific subject to see all papers</u>.</p>
       <p>AM exams are set at 09:00, PM exams are set at 13:30.</p>
       <div id="subjects-list">
