--- a/calendar.html
+++ b/calendar.html
@@ -9,13 +9,15 @@
     </head>
     <body>
 
+        <a href="index.html"><button id="back-button">◄</button></a>
+
         <div id="main">
             <h1>Google Calendar Uploadable File Creation</h1>
             <div class="spacing"></div>
-            <p>If you would like to add all exams to your Google Calendar, you can subscribe using <a href="https://calendar.google.com/calendar/u/1?cid=MzA0YTVjZGQ5Y2VlZDI0NmFiYjNlZDY1NDViOTA2Zjk2MGJiZjg5NDQ0ZDFjNWEyMWM1OTc0NTAwNmYwODMxM0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t" target="_blank">this link</a></p>
+            <p>If you would like to add all exams to your Google Calendar, you can subscribe using <a href="https://calendar.google.com/calendar/u/1?cid=MzA0YTVjZGQ5Y2VlZDI0NmFiYjNlZDY1NDViOTA2Zjk2MGJiZjg5NDQ0ZDFjNWEyMWM1OTc0NTAwNmYwODMxM0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t" target="_blank">this link</a>.</p>
             <p>Alternatively, select the specific subjects that you would like to upload to your google calendar using the check boxes, then press the download button at the bottom of the page.</p>
-            <p>Then, in Google Calendar, go to Settings, Import & Export (left panel), and select the donwloaded file.</p>
-            <p>Note: you may want to create a new calendar fist and then select that when uploading the file.</p>
+            <p>Then, in <a href="https://calendar.google.com/calendar/u/1/r/settings/export?pli=1">Google Calendar, go to Settings, Import & Export (left panel)</a>, and select the donwloaded file.</p>
+            <p><b>Note: you may want to create a new calendar fist, as all events will be added to the selected calendar.</b></p>
             
         </div>
 
@@ -40,6 +42,6 @@
         
             // Create the lesson selection table when the page loads
             window.onload = createLessonTable;
-        </script>
+        </script> 
     </body>
 </html>
