--- a/timetable.html
+++ b/timetable.html
@@ -13,7 +13,7 @@
   <br>
   <div id="open-menu-btn" style="top: 60px">&#9776;</div>
 
-  <a href="index.html"><div id="timetable-btn" style="top: 60px">Home</div></a>
+  <a href="index.html"><button id="back-button">◄</button></a>
 
   <div id="side-menu" style="top: 60px">
     <h2>Subjects</h2>
